# last-opengl-project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  how_to_build.md
dependencies/MMDFormats/MikuMikuFormats/: EncodingHelper.h  Pmd.cpp  Pmx.cpp  Pmx.h  Vmd.h
dependencies/glad/src/: glad.c
include/: camera.h  coordinate_display.h  drawable.hpp  graphics.h  keyboard_input_event_observer.h  point_light.h  spot_light.h  transform.h  utils.hpp  window.h  window_resize_event_observer.h
include/animation/: animated_object.hpp  animator_skeletal.h  bone_animation.h  mesh_morph_animation.h  skeletal_animation.h
include/application/: application.h  application_cornell_box.h  application_house_hutao.h  application_spartan.h  application_sponza.h
include/data/: mtl.h  obj_model.h  obj_model_deserializer.h  skeletal_animation_data.h  skeletal_animation_deserializer.h  skeleton.h  skeleton_model.h
include/framebuffer/: cube_depth_framebuffer.h  fb_depth.h  fb_regular.h  fb_srgb.h  framebuffer.h
include/material/: material.hpp  material_mmd.h  material_pbr.h  material_phong.h  material_phong_color.h  material_test_box.h  material_test_plane.h
include/resource/: deserializer.hpp  global_resource.h  resource.h  resource_base.h  resource_unit.h
include/scene_grid/: scene_grid.hpp  sg_lpv_sh.h
include/scene_node/: scene_node.h  sn_box.h  sn_color_box.hpp  sn_model.h  sn_point_light.h  sn_skeleton_model.h  sn_spot_light.h  sn_test_box.hpp  sn_test_plane.h
include/shader/: shader.h  shader_compute.h  shader_compute_deserializer.h  shader_pipeline.h  shader_pipeline_deserializer.h
include/system/: os_linux.h  os_windows.h  system.h
include/texture/: texture.hpp  texture_2d.h  texture_2d_frgb.h  texture_2d_frgba.h  texture_2d_gpu.h  texture_2d_r.h  texture_2d_rgb.h  texture_2d_rgb_deserializer.h  texture_2d_rgb_gpu.h  texture_2d_rgba.h  texture_2d_rgba_deserializer.h  texture_3d.h  texture_3d_frgba.h  texture_3d_rgba.h  texture_cube.h  texture_cube_deserializer.h
resources/: global_resources.toml
resources/models/: model_resources.toml
resources/shaders/: shader_resources.toml
resources/shaders/data/: coord_display_fragment.glsl  coord_display_vertex.glsl  cube_depth_fragment.glsl  cube_depth_geometry.glsl  cube_depth_vertex.glsl  depth_shader_pbr_fragment.glsl  depth_shader_phong_color_fragment.glsl  depth_shader_phong_fragment.glsl  depth_shader_phong_vertex.glsl  fb_blur.glsl  fb_edge_dn_fragment.glsl  fb_red_fragment.glsl  fb_regular_fragment.glsl  fb_sobel_contour_fragment.glsl  fb_vertex.glsl  flux_pbr_fragment.glsl  flux_phong_color_fragment.glsl  flux_phong_fragment.glsl  flux_vertex.glsl  id_shader_fragment.glsl  id_shader_vertex.glsl  lpv_inject_compute.glsl  lpv_propagate_compute.glsl  (+21 more)
resources/textures/: default_texture.ppm
src/: camera.cpp  coordinate_display.cpp  graphics.cpp  main.cpp  point_light.cpp  spot_light.cpp  transform.cpp  window.cpp
src/animation/: CMakeLists.txt  animator_skeletal.cpp  bone_animation.cpp  mesh_morph_animation.cpp  skeletal_animation.cpp
src/application/: CMakeLists.txt  application.cpp  application_cornell_box.cpp  application_house_hutao.cpp  application_spartan.cpp  application_sponza.cpp
src/data/: CMakeLists.txt  mtl.cpp  obj_model.cpp  obj_model_deserializer.cpp  skeletal_animation_data.cpp  skeletal_animation_data_deserializer.cpp  skeleton.cpp  skeleton_model.cpp
src/framebuffer/: CMakeLists.txt  cube_depth_framebuffer.cpp  fb_depth.cpp  fb_frgb.cpp  fb_regular.cpp  framebuffer.cpp
src/material/: CMakeLists.txt  material_mmd.cpp  material_pbr.cpp  material_phong.cpp  material_phong_color.cpp  material_test_box.cpp  material_test_plane.cpp
src/resource/: CMakeLists.txt  global_resource.cpp  resource.cpp
src/scene_grid/: CMakeLists.txt  sg_lpv_sh.cpp
src/scene_node/: CMakeLists.txt  scene_node.cpp  sn_box.cpp  sn_model.cpp  sn_point_light.cpp  sn_skeleton_model.cpp  sn_spot_light.cpp
src/shader/: CMakeLists.txt  shader.cpp  shader_compute.cpp  shader_compute_deserializer.cpp  shader_pipeline.cpp  shader_pipeline_deserializer.cpp
src/system/: CMakeLists.txt  os.cpp  system.cpp
src/texture/: CMakeLists.txt  texture_2d.cpp  texture_2d_frgb.cpp  texture_2d_frgba.cpp  texture_2d_r.cpp  texture_2d_rgb.cpp  texture_2d_rgb_deserializer.cpp  texture_2d_rgb_gpu.cpp  texture_2d_rgba.cpp  texture_2d_rgba_deserializer.cpp  texture_3d.cpp  texture_3d_frgba.cpp  texture_3d_rgba.cpp  texture_cube.cpp  texture_cube_deserializer.cpp
(+8 files in other folders)
